strappi activities can be filtered by current user in Student View

--- a/server/api/activity/models/activity.settings.json
+++ b/server/api/activity/models/activity.settings.json
@@ -46,6 +46,12 @@
     "activity_template": {
       "type": "text",
       "required": false
+    },
+    "owner": {
+      "type": "string"
+    },
+    "shared_with": {
+      "type": "text"
     }
   }
 }
